day44 release